--- a/style.css
+++ b/style.css
@@ -20,10 +20,21 @@ ul {
     padding-right: 50px;
     /* border: 2px solid black; */
     background-color: darkgray;
+    width: 520px;
+    margin: auto;
 }
 p {
     padding: 20px;
     /* border: 2px solid black; */
     padding-top: 2px;
     padding-bottom: 2px;
+}
+textarea {
+    display: flex;
+    width: 400px;
+    margin: 0 auto;
+    /* border: 5px solid black; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    background-color: rgb(240, 239, 239);
 }
