--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: lightgrey;
+    font-family: Verdana, Tahoma, sans-serif;
 
 }
 #appBox {
@@ -22,6 +23,7 @@ ul {
     background-color: darkgray;
     width: 520px;
     margin: auto;
+    font-family: 'Times New Roman', Times, serif;
 }
 p {
     padding: 20px;
@@ -37,4 +39,25 @@ textarea {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     background-color: rgb(240, 239, 239);
+}
+#outputDiv {
+    border: 2px solid black;
+    display: block;
+    width: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+}
+#button {
+    border: 1px solid black;
+    border-radius: 20px;
+    background-color: darkgreen;
+    display: block;
+    margin: 30 auto;
+    padding: 5px;
+    height: 30px;
+    width: 80px;
+    text-align: center;
+    box-shadow: 2px 2px black;
+
 }
