--- a/style.css
+++ b/style.css
@@ -18,12 +18,18 @@ ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    padding-right: 50px;
+    padding-right: 45px;
     /* border: 2px solid black; */
     background-color: darkgray;
     width: 520px;
     margin: auto;
     font-family: 'Times New Roman', Times, serif;
+    flex-wrap: wrap;
+}
+li {
+    width: 16%;
+    padding: 10px 0px 10px 0px;
+    text-align: center;
 }
 p {
     padding: 20px;
@@ -49,7 +55,7 @@ textarea {
     margin-top: 50px;
     text-align: center;
 }
-#button {
+.button {
     border: 1px solid black;
     border-radius: 20px;
     background-color: royalblue;
