--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ textarea {
     margin-top: 50px;
     text-align: center;
 }
+#buttonDiv {
+    display: flex;
+}
+
 .button {
     border: 1px solid black;
     border-radius: 20px;
